2025-01-28T01:40:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13001926598 # 785
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-28
* notice: last 14d: unq all: 12 58
* notice: prev accum: outdated-unq outdated-all / unq all: 947 4945 / 958 5001
* notice: next accum: outdated-unq outdated-all / unq all: 947 4945 / 959 5003
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-01-27]

2025-01-27T12:41:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12989215936 # 784
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-27
* notice: last 14d: unq all: 11 56
* notice: prev accum: outdated-unq outdated-all / unq all: 946 4944 / 958 5001
* notice: next accum: outdated-unq outdated-all / unq all: 947 4945 / 958 5001
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-13] / []

2025-01-24T01:40:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12941561697 # 777
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-24
* notice: last 14d: unq all: 12 57
* notice: prev accum: outdated-unq outdated-all / unq all: 946 4944 / 957 5000
* notice: next accum: outdated-unq outdated-all / unq all: 946 4944 / 958 5001
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-01-23]

2025-01-23T12:41:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12929398226 # 776