@@ -1,6 +1,6 @@
 {
-  "count": 58,
-  "uniques": 12,
+  "count": 69,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2025-01-16T00:00:00Z",
@@ -30,6 +30,11 @@
     {
       "timestamp": "2025-01-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-01-28T00:00:00Z",
+      "count": 11,
       "uniques": 1
     }
   ]
