@@ -1,3 +1,12 @@
+2025-01-28T12:40:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13010645373 # 786
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-28
+* notice: last 14d: unq all: 13 69
+* notice: prev accum: outdated-unq outdated-all / unq all: 947 4945 / 959 5003
+* notice: next accum: outdated-unq outdated-all / unq all: 947 4945 / 960 5014
+* notice: prev exec diff / last date diff / accum: unq all: +1 +11 -0 -0 / +1 +11 -0 -0 / 1 11
+* notice: removed / changed dates: [] / [2025-01-28]
+
 2025-01-28T01:40:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13001926598 # 785
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-28
